--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </div>
     </div>
 
-    <canvas id="plot" class="plot" width=600 height=480></canvas>
+    <canvas id="plot" class="plot" width=300 height=240></canvas>
 
-    <div class="switch off" id="on-switch"></div>
+    <div class="switch" id="on-switch"></div>
 </body>
 
 </html>
